[package]
name = "athletic"
description = "CAM - Clube Atlético Mineiro"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Falcão Gonçalves De Moura <gabrielteratos@gmail.com>"]
documentation = "https://docs.rs/athletic"
readme = "README.md"
license = "MIT or Apache-2.0"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
color-eyre = "0.6.2"
flume = "0.10.14"
ggez = "0.8.1"
image = { version = "0.24.6", features = ["png"] }
nokhwa = {version = "0.10.0", features =["input-native"]}
once_cell = "1.18.0"
