[package]
name = "athletic"
description = "CAM - Clube Atlético Mineiro"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Falcão Gonçalves De Moura <gabrielteratos@gmail.com>"]
documentation = "https://docs.rs/athletic"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE-APACHE"

[dependencies]
assert_approx_eq = "1.1.0"
clap = { version = "4.3.2", features = ["derive"] }
color-eyre = "0.6.2"
crossbeam = "0.8.2"
flume = "0.10.14"
ggez = "0.8.1"
image = { version = "0.24.6", features = ["png"] }
jpeg-decoder = "0.3.0"
nokhwa = {version = "0.10.0", features =["input-native"]}
once_cell = "1.18.0"
palette = "0.7.2"
rand = "0.8.5"
rayon = "1.7.0"
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
